Fixed error on gap class and some errors and added new size classess

--- a/helper.css
+++ b/helper.css
@@ -1675,91 +1675,92 @@
 
 /* gap  */
 .gap-1 {
-    grid-gap: 1rem;
+    gap: 1rem;
 }
 
 .gap-2 {
-    grid-gap: 2rem;
+    gap: 2rem;
 }
 
 .gap-3 {
-    grid-gap: 3rem;
+    gap: 3rem;
 }
 
 .gap-4 {
-    grid-gap: 4rem;
+    gap: 4rem;
 }
 
 .gap-5 {
-    grid-gap: 5rem;
+    gap: 5rem;
 }
 
 .gap-6 {
-    grid-gap: 6rem;
+    gap: 6rem;
 }
 
 .gap-7 {
-    grid-gap: 7rem;
+    gap: 7rem;
 }
 
 .gap-8 {
-    grid-gap: 8rem;
+    gap: 8rem;
 }
 
 .gap-9 {
-    grid-gap: 9rem;
+    gap: 9rem;
 }
 
 .gap-10 {
-    grid-gap: 10rem;
+    gap: 10rem;
 }
 
 .gap-11 {
-    grid-gap: 11rem;
+    gap: 11rem;
 }
 
 .gap-12 {
-    grid-gap: 12rem;
+    gap: 12rem;
 }
 
 .gap-13 {
-    grid-gap: 13rem;
+    gap: 13rem;
 }
 
 .gap-14 {
-    grid-gap: 14rem;
+    gap: 14rem;
 }
 
 .gap-15 {
-    grid-gap: 15rem;
+    gap: 15rem;
 }
 
 .gap-16 {
-    grid-gap: 16rem;
+    gap: 16rem;
 }
 
 .gap-17 {
-    grid-gap: 17rem;
+    gap: 17rem;
 }
 
 .gap-18 {
-    grid-gap: 18rem;
+    gap: 18rem;
 }
 
 .gap-19 {
-    grid-gap: 19rem;
+    gap: 19rem;
 }
 
 .gap-20 {
-    grid-gap: 20rem;
+    gap: 20rem;
 }
+
 
 /* color class*/
 .white-clr {
     color: var(--white-color);
 }
 
-.white.bg {
+.white-bg {
     background-color: var(--white-color);
 }
 
@@ -1999,6 +2000,24 @@
 
 .w-20 {
     width: 20rem;
+}
+
+.size-full {
+    width: 100%;
+    height: 100%;
+}
+
+.size-vh-vw {
+    height: 100vh;
+    widows: 100vw;
+}
+
+.size-vh {
+    height: 100vh;
+}
+
+.size-vw {
+    width: 100vw;
 }
 
 /* radius class  */
